--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@googlemaps/markerclusterer": "2.5.3",
-    "@vis.gl/react-google-maps": "1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@vis.gl/react-google-maps": "1.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.0"
   },
