--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@googlemaps/markerclusterer": "2.5.3",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "1.1.0",
