--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@googlemaps/markerclusterer": "2.5.3",
+    "@mui/material": "^5.15.20",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "1.1.0",
     "jwt-decode": "^4.0.0",
