--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,15 @@
     "@mui/material": "^5.15.20",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "1.1.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
