--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
